--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,207 @@
-.App {
-  text-align: center;
+* {
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background-color: #000000;
+    color: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.center-max-size {
+    max-width: 1020px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+    text-transform: uppercase;
+    z-index: 1000;
+
 }
 
-.App-link {
-  color: #61dafb;
+.poster {
+    position: relative; /* Make sure the poster is a positioned element */
+    background-size: cover;
+    background-position: top center;
+    min-height: 600px;
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 50px;
+    z-index: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.poster-content {
+    width: 80%;
+    transform: translateX(-160px);
+}
+
+.DesApp {
+    font-size: 92px;
+    margin-top: 0;
+    line-height: 1;
+    margin-bottom: 10px;
+
+}
+
+.container {
+    background-color: #000000;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 30px;
+}
+
+
+.button {
+    margin: 20px 0;
+    background: #0F1014;
+    color: white;
+    border: none;
+    outline: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    transition: box-shadow 0.2s;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    border: 1px solid gray;
+}
+
+.button:hover {
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+.close-video {
+    position: absolute;
+    transform: translateX(890px);
+    z-index: 2;
+    top: 550px;
+
+}
+
+.youtube-container {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+
+
+}
+
+.youtube {
+    transform: translateX(550px);
+    margin-top: 60px;
+    width: 800px;
+    height: 500px;
+    border-radius: 10px;
+    padding-bottom: 70px;
+
+}
+
+.brand {
+    font-weight: bold;
+}
+
+/*-- MOVIE */
+
+.movie {
+    position: relative;
+    cursor: pointer;
+    text-align: left;
+    font-size: 16px;
+}
+
+.movie img {
+    height: 355px;
+    max-width: 100%;
+    border-radius: 10px;
+}
+
+.movie-infos {
+    padding: 15px 0;
+}
+
+.movie-title {
+    margin: 0;
+}
+
+.movie-voting {
+    position: absolute;
+    right: 75px;
+    top: 10px;
+    background-color: #000000;
+    border: 1px solid rgb(255, 0, 0);
+    padding: 10px;
+    font-size: 12px;
+    border-radius: 25px;
+}
+
+/** SEARCH **/
+.formApp {
+    position: relative;
+    transform: translateY(-17px);
+}
+
+.searchApp {
+    border: 1px solid rgb(255, 0, 0);
+    outline: transparent;
+    background-color: transparent;
+    padding: 5px 10px;
+    border-radius: 25px;
+    color: white;
+    cursor: pointer !important;
+
+
+}
+
+.submit-searchApp {
+    position: absolute;
+    left: 180px;
+    top: 5px;
+    background-color: transparent;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.search {
+    display: inline-block;
+    position: relative;
+}
+
+.search input[type="text"] {
+    width: 200px;
+    padding: 10px;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.search button[type="submit"] {
+    background-color: #787878;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    padding: 10px 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: .9s ease;
+}
+
+.search button[type="submit"]:hover {
+    transform: scale(1.1);
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 0, 0);
 }
